# Rcompiler

./: .gitignore  CMakeLists.txt  Makefile  builtin.c  clean  clean.cpp
.github/workflows/: run.yml
include/: ast.h  ir.h  lexer.h  parser.h  semantic.h  token.h
scripts/: run_ir_timeout.sh
src/: ast.cpp  ir.cpp  ir_test.cpp  lexer.cpp  main.cpp  parser.cpp  parser_test.cpp  semantic.cpp  semantic_test.cpp  test_runner.cpp  token.cpp
test_case/: test_case.in
test_case/semantic-1/array1/: testcase_info.json
test_case/semantic-1/array2/: testcase_info.json
test_case/semantic-1/array3/: testcase_info.json
test_case/semantic-1/array4/: testcase_info.json
test_case/semantic-1/array5/: testcase_info.json
test_case/semantic-1/array6/: testcase_info.json
test_case/semantic-1/array7/: testcase_info.json
test_case/semantic-1/array8/: testcase_info.json
test_case/semantic-1/autoref1/: testcase_info.json
test_case/semantic-1/autoref2/: testcase_info.json
test_case/semantic-1/autoref3/: testcase_info.json
test_case/semantic-1/autoref4/: testcase_info.json
test_case/semantic-1/autoref5/: testcase_info.json
test_case/semantic-1/autoref6/: testcase_info.json
test_case/semantic-1/autoref7/: testcase_info.json
test_case/semantic-1/autoref8/: testcase_info.json
test_case/semantic-1/autoref9/: testcase_info.json
test_case/semantic-1/basic1/: testcase_info.json
test_case/semantic-1/basic10/: testcase_info.json
test_case/semantic-1/basic11/: testcase_info.json
test_case/semantic-1/basic12/: testcase_info.json
test_case/semantic-1/basic13/: testcase_info.json
test_case/semantic-1/basic14/: testcase_info.json
test_case/semantic-1/basic15/: testcase_info.json
test_case/semantic-1/basic16/: testcase_info.json
test_case/semantic-1/basic17/: testcase_info.json
test_case/semantic-1/basic18/: testcase_info.json
test_case/semantic-1/basic19/: testcase_info.json
test_case/semantic-1/basic2/: testcase_info.json
test_case/semantic-1/basic20/: testcase_info.json
test_case/semantic-1/basic21/: testcase_info.json
test_case/semantic-1/basic22/: testcase_info.json
test_case/semantic-1/basic23/: testcase_info.json
test_case/semantic-1/basic24/: testcase_info.json
test_case/semantic-1/basic25/: testcase_info.json
test_case/semantic-1/basic26/: testcase_info.json
test_case/semantic-1/basic27/: testcase_info.json
test_case/semantic-1/basic28/: testcase_info.json
test_case/semantic-1/basic29/: testcase_info.json
test_case/semantic-1/basic3/: testcase_info.json
test_case/semantic-1/basic30/: testcase_info.json
test_case/semantic-1/basic31/: testcase_info.json
test_case/semantic-1/basic32/: testcase_info.json
test_case/semantic-1/basic33/: testcase_info.json
test_case/semantic-1/basic34/: testcase_info.json
test_case/semantic-1/basic35/: testcase_info.json
test_case/semantic-1/basic36/: testcase_info.json
test_case/semantic-1/basic37/: testcase_info.json
(+227 files in other folders)
